--- a/view/adminhtml/web/css/styles.css
+++ b/view/adminhtml/web/css/styles.css
@@ -19,7 +19,7 @@
 
 .globalpayments_paymentgateway-section .section-config.heartland-other-section .entry-edit-head {
   background-size: 15rem;
-  background-image: url('../images/heartland-logo.png');
+  background-image: url('../images/globalpayments-logo.png');
 }
 
 .globalpayments_paymentgateway-section .section-config.gpApi-other-section .entry-edit-head {
