--- a/view/frontend/web/template/digital-wallets/google-pay/core-checkout.html
+++ b/view/frontend/web/template/digital-wallets/google-pay/core-checkout.html
@@ -45,7 +45,7 @@
         <!-- real submit button -->
         <div class="actions-toolbar">
             <div class="primary">
-                <div data-bind="attr: {'id': getTargetElementId()}, afterRender: renderGooglePay()"></div>
+                <div data-bind="attr: {'id': getTargetElementId()}, afterRender: renderGooglePay()" style="width: 250px !important;"></div>
             </div>
         </div>
     </div>
